initial demo project with errors